--- a/trunk/README
+++ b/trunk/README
@@ -1,75 +1,68 @@
-This text is from README, the Ansys mode documentation (below
-formatting is targeted for the Emacs Wiki)
+This is the text of the ANSYS-Mode README file (the formatting is
+targeted for the Emacs Wiki)
 
 Copyright (C) 2006 - 2012  H. Dieter Wilhelm, GPL V3
 
 == Introduction ==
-GNU Emacs Editor support for working with Ansys FEA.
 
-This project provides Gnu Emacs editor support for working with the
-FEA (Finite Element Analysis) program Ansys (http://www.ansys.com).
-Gnu Emacs (http://www.gnu.org/software/emacs/) is an up-to-date,
+This [http://code.google.com/p/ansys-mode/ project] supports working
+with the FEA (Finite Element Analysis) suite [http://www.ansys.com
+ANSYS].
+
+It provides *ANSYS-Mode*, an add-on to the
+[http://www.gnu.org/software/emacs/ Gnu Emacs] editor for navigating,
+inspecting and writing APDL files.  The mode offers managing and
+communication capabilities for ANSYS processes, like interactive code
+debugging with the ANSYS solver or listing the current license status,
+etc. Some features are quite sophisticated but the overall
+documentation is targeted for ANSYS users with little Emacs
+experience.
+
+[http://www.gnu.org/home.en.html Gnu] Emacs is an up-to-date,
 powerful, yet free editor which is available for any operating system
-where Ansys is running.  The code defines 'Ansys mode', an Emacs mode
-for inspecting, writing and navigating in APDL (Ansys Parametric
-Design Language) files and offers managing and communication
-capabilities for Ansys solver/interpreter processes as well.
+where ANSYS is running.
 
-Some features are quite sophisticated but the overall documentation is
-targeted for Ansys users with little Emacs experience.  The current
-stable version 14.0.1 is available at the Google Code site
-http://code.google.com/p/ansys-mode, you will find there also a
-tutorial ("wget
-http://code.google.com/p/ansys-mode/downloads/list/ansys-mode-14.0.1.tgz").
-For the installation, issues and comments please have a look at the
-Ansys mode Wiki (http://www.emacswiki.org/cgi-bin/wiki/AnsysMode) or
-submit a bug report at the issues list at its Google Code site
-(http://code.google.com/p/ansys-mode/issues/list).
+The current stable version (14.0.1) of ANSYS-Mode is available at
+[http://code.google.com/p/ansys-mode Google's Code site] (or paste
+"wget
+http://code.google.com/p/ansys-mode/downloads/list/ansys-mode-14.0.1.tgz"
+to the console).  You will find at the download section a tutorial in
+PDF as well, or check out the
+[http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/ansys-mode_tutorial.html
+online version] of it.
+
+Please report bugs! You can do this at Google Code's
+[http://code.google.com/p/ansys-mode/issues/list issues list].
 
 == Requirements ==
 
-The code is based on Ansys version 14.0 and is written for GNU Emacs
-and not consciously targeted for XEmacs.  It is tested with
-Emacs-24.1, Emacs-23.3, Emacs-23.2 and Emacs-23.1 under XP64 and
-GNU/Linux.  The code compiles and runs also with Emacs-22.1, i. e. it
-should work with this and any later version.  (Emacs-23.2 was relased
-in May 2010, Emacs-23.1 in July 2009, Emacs-22.1 in July 2007.)  The
-code can be loaded but won't run flawlessly without adaptions for
-Emacs-21.3 (released in Mar. 2003).
+The code is based on ANSYS version 14.0 and is written for GNU Emacs
+and not consciously targeted for XEmacs.  It is tested with Emacs-24.1
+under XP32, XP64 and GNU/Linux.
 
-If applicable please grab the package of a pre-compiled Emacs-24.1 for
-Windows together with a preconfigured Ansys mode at above Google Code
-site and unpack this archive anywhere on your system.  Alternatively
-visit http://ftp.gnu.org/pub/gnu/emacs/ for an original version of GNU
-Emacs and/or extract and configure the Ansys mode package separately.
-
-The Ansys solver control and communication capabilities are somewhat
-restricted on non-UNIX systems.
-
-The latest Ansys mode consists of more than one lisp file, be sure you
-have all necessary files, please consult the == Installation ==
-section for a list of them.
+For some of the ANSYS-Mode solver control and communication
+capabilities a UNIX systems is necessary.
 
 == Features ==
 
-* Ansys process management (viewing error files, license status,
-  starting the Ansys help browser, etc.)
+* ANSYS process management (viewing error files, license status,
+  starting the ANSYS help browser, etc.)
 
 * Solver comunication facilities, i. e. sending code fragments from
-  the macro file or commands interactively to an Ansys solver instance
+  the macro file or commands interactively to an ANSYS solver instance
   (UNIX only)
 
 * Command syntax help in the editor (similar to but more verbose then
-  the Ansys dynamic prompt) also with hints for undocumented commands
+  the ANSYS dynamic prompt) also with hints for undocumented commands
 
-* Keyword completion of Ansys commands, elements, get- and
-  parametric-functions (case-sensitive) of nearly 2000 Ansys symbols
+* Keyword completion of ANSYS commands, elements, get- and
+  parametric-functions (case-sensitive) of nearly 2000 ANSYS symbols
 
 * Comprehensive keyboard shortcuts for code navigation: Skipping
   comments, navigating number blocks, searching *DO-, *IF-, *DOWHILE-,
   *CREATE-blocks, etc.
 
-* Syntax highlighting in various decoration levels (complete Ansys
+* Syntax highlighting in various decoration levels (complete ANSYS
   keywords, undocumented commands, deprecated elements, ...)  and
   optionally also user defined variables (experimental)
 
@@ -82,8 +75,8 @@ section for a list of them.
   (2) these "user variables" are highlighted as well
 
 * Preview and insertion (optionally auto-insertion) of header and
-  Ansys code templates for APDL files.  Respective snippets represent
-  examples of APDL work flows and considerable Ansys know-how and are
+  ANSYS code templates for APDL files.  Respective snippets represent
+  examples of APDL work flows and considerable ANSYS know-how and are
   easily extensible to boot.  The templates are partly interactive
   i. e. they are asking for or completing user input.
 
@@ -101,11 +94,11 @@ section for a list of them.
   i. e. with writting a "nickname" Emacs exchanges the characters with
   a whole code template
 
-* Ansys mode changes some Emacs default behaviour to alleviate the
+* ANSYS-Mode changes some Emacs default behaviour to alleviate the
   transition from other editors and user interface standards
 
 As a visual example, a screen-shot on EmacsWiki and Google code show
-an Emacs frame (GTK+ toolkit under Linux) with a ripped off Ansys menu
+an Emacs frame (GTK+ toolkit under Linux) with a ripped off menu
 field.  The APDL file is in the right window with the (experimental)
 user variable highlighting switched on and a help overlay (in yellow
 background) activated. The smaller windows on the left hand side are
@@ -114,12 +107,40 @@ preview buffer of a certain code template, respectively.
 
 http://www.duenenhof-wilhelm.de/dieter/ansys-mode.jpg
 
+== News ==
+
+* Included some tutorial slides for ANSYS-Mode:
+  ansys-mode_tutorial.pdf
+
+* Added a timer for getting rid of the parameter help overlays after
+  some time interval (1 min) without reusing the parameter help
+
+* Added a (customisable) variable `ansys-no-of-processors' and
+  function with the same name for specifying the number of processors
+  for an Ansys multiprocessor run
+
+* Extended mode commands, templates and removed typos mainly in
+  ansys-template.el. For example added all *get functions in the
+  ansys-skeleton-function template
+
+* Added a custom variable the corresponding function
+  ansys-ansysli-servers for specifying the ansys interconnect license
+  servers
+
+* Added a new shortcut and menu entry isometric view
+
+* Applied sensible defaults to ansys-lmutil-program, ansys-program and
+  ansys-help-program, for most needs it should now be enough just to
+  set the used ansys version (ansys-current-ansys-version, if it is
+  not 140, see the example config file default_el) and maybe
+  additionally the installation directory (ansys-install-directory).
+
 == Installation ==
 
-The version scheme is a mixture of the Ansys release (currently 14.0)
+The version scheme is a mixture of the ANSYS release (currently 14.0)
 on which the highlighting and completing code is based and the version
-increments (currently .1) of Ansys mode (thus 14.0.1) for this
-particular Ansys release.
+increments (currently .1) of ANSYS-Mode (thus 14.0.1) for this
+particular ANSYS release.
 
 === Files ===
 
@@ -146,22 +167,32 @@ Auxiliaries:
 
 __For Windows systems:__
 
-Please use the Emacs archive bundled with the latest stable
-preconfigured Ansys mode at http://code.google.com/p/ansys-mode.
-Unpack the archive anywhere on the system (you do not need
-administrator rights).  You might subsequently run the program
-addpm.exe (located in the bin directory) to add an Emacs entry to the
-Windows Start menu (please refer to the README.W32 file) otherwise
-start the Emacs executable runemacs.exe from there.  Ansys mode is
-immediately available, by opening (check the fontification.mac
-example) or creating a new APDL file with a .mac suffix.  Have fun!
+If applicable please grab the package of a pre-compiled Emacs-24.1
+(Win32/64) bundled with a preconfigured ANSYS-Mode (for Windows 64
+bit) at above Google Code site and unpack this archive anywhere on
+your system (you do not need administrator rights).  You might
+subsequently run the program addpm.exe (located in the bin directory)
+to add an Emacs entry to the Windows start menu (please refer to the
+README.W32 file) otherwise start the Emacs executable runemacs.exe
+from there.
 
-(If you did not install Ansys in its default Installation directory on
-drive C:, please adjust the `default.el' file in Emacs' `site-lisp'
-directory accordingly, if you want to be ablet to start 'anslic_admin'
-or the Ansys help program directly from Ansys mode.)
+ANSYS-Mode is now immediately available, by opening (check out the
+`fontification.mac' example) or by creating a new APDL file with a
+.mac suffix.  Have fun!
 
-__For existing Emacs installations on Windows or UNIX:__
+Most functionalities should work but if you have not installed ANSYS
+in its default installation directory on drive `C:Program Files' on
+Win64 and you want to start for example 'anslic_admin' or the Ansys
+help browser directly from Emacs please adjust the configuration file
+`default.el' file in Emacs' `site-lisp' directory according to the
+commented code examples.
+
+In case you want to download or have already installed the
+[http://ftp.gnu.org/pub/gnu/emacs/ original version] of GNU Emacs, you
+can also download and configure the ANSYS-Mode package
+separately. Please see below.
+
+__For existing Emacs installations on Windows and UNIX:__
 
 ==== Direct way; no file configuration necessary ====
 
@@ -221,7 +252,7 @@ home directory '~\').
 
      (add-to-list 'load-path
 		  "C:\\YOUR\\DIRECTORY\\WHERE\\MODE\\FILES\\RECIDE")
-     (autoload 'ansys-mode "ansys-mode" "Activate Ansys mode." 'interactive)
+     (autoload 'ansys-mode "ansys-mode" "Activate ANSYS-Mode." 'interactive)
 
 From here you are able to type "M-x ansys-mode RET" to activate the
 mode for every interesting file.
@@ -236,7 +267,7 @@ following to your '.emacs' file:
      (add-to-list 'auto-mode-alist '("\\.mac$" . ansys-mode))
      (add-to-list 'auto-mode-alist '("\\.dat$" . ansys-mode))
      (add-to-list 'auto-mode-alist '("\\.inp$" . ansys-mode))
-     ;; this is the suffix for "Ansys Neutral Files" which include some APDL.
+     ;; this is the suffix for "ANSYS Neutral Files" which include some APDL.
      (add-to-list 'auto-mode-alist '("\\.anf$" . ansys-mode))
 
 The suffix below belongs to the "anys neutral file" export format
@@ -247,7 +278,7 @@ which contains also an APDL header and footer.
 * Autoinsertion of code
 
 In case you also want to enjoy the auto insertion feature, which puts
-(optionally) some predefined body of Ansys commands to every new APDL
+(optionally) some predefined body of ANSYS commands to every new APDL
 file insert the following into '.emacs':
 
      (setq auto-insert-mode 1)
@@ -256,15 +287,15 @@ file insert the following into '.emacs':
 
 * Autoloading of helper functions
 
-With below section you are also able to use certain Ansys related
+With below section you are also able to use certain ANSYS related
 commands in a new Emacs session without the need of previously having
 explicitely called ansys-mode.
 
-     (autoload 'ansys-customise-ansys "ansys-mode" "Activate the function for calling a special Ansys customisation buffer." 'interactive)
-     (autoload 'ansys-abort-file "ansys-mode" "Activate the function for  aborting Ansys runs." 'interactive)
-     (autoload 'ansys-display-error-file "ansys-mode" "Activate the function for inspecting the Ansys error file." 'interactive)
-     (autoload 'ansys-start-ansys-help "ansys-mode" "Activate the function for starting the Ansys help browser." 'interactive)
-     (autoload 'ansys-license-status "ansys-mode" "Activate the function for displaying Ansys license status or starting a license utility." 'interactive)
+     (autoload 'ansys-customise-ansys "ansys-mode" "Activate the function for calling a special ANSYS customisation buffer." 'interactive)
+     (autoload 'ansys-abort-file "ansys-mode" "Activate the function for  aborting ANSYS runs." 'interactive)
+     (autoload 'ansys-display-error-file "ansys-mode" "Activate the function for inspecting the ANSYS error file." 'interactive)
+     (autoload 'ansys-start-ansys-help "ansys-mode" "Activate the function for starting the ANSYS help browser." 'interactive)
+     (autoload 'ansys-license-status "ansys-mode" "Activate the function for displaying ANSYS license status or starting a license utility." 'interactive)
 
 * A further configuration method
 
@@ -280,19 +311,19 @@ file.
 == Usage and customisation ==
 
 When you have a file under `ansys-mode' check out the menu bar's
-"Ansys" entry for its possibilities and select the entry "Describe
-Ansys Mode" or type "C-h m" (i. e. the CTRL key together with the "h"
-key and subsequently the "m" key), which will display the Ansys mode
+"ANSYS" entry for its possibilities and select the entry "Describe
+ANSYS Mode" or type "C-h m" (i. e. the CTRL key together with the "h"
+key and subsequently the "m" key), which will display the ANSYS-Mode
 help which is your "online" guide for its usage, keybindings and
 customisation options.
 
-Templates, i.e. code snippets or skeletons might be extended in
-"ansys-template.el" and can be used similarly or complementarily to a
-classical Ansys macro library.
+Templates, i.e. code snippets or so called skeletons might be extended
+in "ansys-template.el" and can be used similarly or complementarily to
+a classical ANSYS macro library.
 
 == Experienced Emacs users ==
 
-Ansys mode changes the default behaviour of Emacs
+ANSYS-Mode changes the default behaviour of Emacs
 
 globally:
 
@@ -302,7 +333,7 @@ globally:
 * Activated Show Paren Mode (show-paren-mode t)
 * Advised M-w (kill-ring-save) without active region to copy the whole line
 
-(Delete Selection Mode can be switched off in the Ansys menu.)
+(Delete Selection Mode can be switched off in the ANSYS menu.)
 
 locally:
 * (setq scroll-preserve-screen-position t)
@@ -324,7 +355,7 @@ In mainly cronological order:
 == Resources ==
 
 * http://www.emacswiki.org
-* http://www.ansys.net -- general Ansys repository
+* http://www.ansys.net -- general ANSYS repository
 * http://www.ansys.com
 * http://www.xansys.org -- ansys online community
 * http://www.padtinc.com/pedal -- another APDL script editor
@@ -343,7 +374,7 @@ maximum highlighting level.  If not already the case try to use the
 code in compiled form, please have a look at the documentation of the
 Emacs function `byte-recompile-directory'.
 
-Ansys "format line" (multi-line highlighting) and "user variable"
+ANSYS "format line" (multi-line highlighting) and "user variable"
 highlighting (when the mentioned flag above ist not set) are somewhat
 brittle, please use M-o M-o to update the fontification in case the
 format line and all variables are not highlighted correctly.
