--- a/trunk/ansys-mode_tutorial.org
+++ b/trunk/ansys-mode_tutorial.org
@@ -21,26 +21,27 @@
 * Introduction
 ** GNU Emacs editor support for working with ANSYS FEA
 
-   This [[http://code.google.com/p/ansys-mode/][project]] provides support for working with the FEA (Finite
-   Element Analysis) program [[http://www.ansys.com][ANSYS]]. It is *not only* another way of
-   syntax highlighting for APDL (ANSYS Parametric Design Language) code.
-
-   The project defines *ANSYS-Mode*, an editor mode for inspecting,
-   writing and navigating in APDL files offering managing and
-   communication capabilities for ANSYS solver (interpreter) processes
-   as well.
-					      
-   [[http://www.gnu.org/software/emacs/][Gnu Emacs]] is an up-to-date, powerful, yet free editor which is
+   This [[http://code.google.com/p/ansys-mode/][project]] supports working with the FEA (Finite Element
+   Analysis) suite [[http://www.ansys.com][ANSYS]]. It is *not only* a syntax highlighter for
+   APDL (ANSYS Parametric Design Language) code!
+#+LaTeX: \\[.2cm]
+   It provides *ANSYS-Mode*, an add-on to the [[http://www.gnu.org/software/emacs/][Gnu Emacs]] editor for
+   navigating, inspecting and writing APDL files.  The mode offers
+   managing and communication capabilities for ANSYS processes, like
+   interactive code debugging with the ANSYS solver or listing the
+   current license status, etc.
+#+LaTeX: \\[.2cm]
+   [[http://www.gnu.org/home.en.html][Gnu]] Emacs is an up-to-date, powerful, yet free editor which is
    available for any operating system where ANSYS is running.
 
-#+LaTeX: \\[.5cm]
-   The notation *C-c* and *M-c* means in the following typing the
-   *CTRL* and *ALT* key together with the *c* key.
+#+LaTeX: \\[.8cm]
+   In the following *C-c* or *M-c* means typing the *CTRL* or *ALT*
+   key together with the *c* key.
   
 * Download
 ** Download ANSYS-Mode together with the free Emacs editor \\ There are no license restrictions also for commercial use
-  Download the pre-configured ANSYS-Mode code in conjunction with the
-  latest Emacs editor binary (for Windows) from the ANSYS-Mode
+  Download the pre-configured (Windows 64 bit) ANSYS-Mode in
+  conjunction with the latest Emacs editor binary from the Google Code
   [[http://code.google.com/p/ansys-mode/downloads/list][download page]].
   
   [[./download.png]]
@@ -149,22 +150,20 @@
    [[./mode_help.png]]
 
 ** Read further ANSYS-Mode documentation
+*** Licensing:
+    There are effectively no restrictions for you using Emacs and
+    ANSYS-Mode commerically.  Both are under the [[http://www.gnu.org/licenses/gpl-3.0.en.html][GPL]] (GNU Puplic
+    License), see also the /LICENSE/ file.
 *** Installation:
-    Detailed installation instructions especially for Unix and Win32
-    systems: Please have a look in the accompanying /README/ file.
+    For detailed installation instructions - especially for Unix and
+    Win32 systems - please have a look in the accompanying /README/
+    file. For an online help please see the [[http://www.emacswiki.org/emacs/ANSYSMode][ANSYS-Mode wiki]].
     
 *** Usage and keyboard short-cuts:
-   Please see the mode's built-in documentation from Emacs' ANSYS menu
-   or type *C-h m*.  For an online help please see the [[http://www.emacswiki.org/emacs/ANSYSMode][ANSYS-Mode wiki]].
-
-*** Licensing:
-    There are no restrictions for you using Emacs and ANSYS-Mode
-    commerically.  Both are under the [[http://www.gnu.org/copyleft/gpl.html][GNU puplic license]], if you are
-    interested see also the /LICENSE/ file.
-
+   Please see the mode's built-in documentation from the ANSYS menu or
+   type *C-h m*.
 *** News and history:
     This is placed in the mode's accompanying /NEWS/ file
-
 
 * Configuration
 
@@ -181,7 +180,7 @@
   [[./default_el.png]]
 
  After changing the file you should restart Emacs. 
-*** The built-in customisation system
+*** The interactive customisation system
           :PROPERTIES:
           :BEAMER_env: block
           :BEAMER_envargs: C[T]
